[project]
name = "PDFs_Orion"
version = "0.1.0"
description = "PDF Outline Extractor for Adobe India Hackathon - Extracts structured outlines from PDF documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF==1.24.1",
    "regex==2023.12.25"
]

[project.urls]
Homepage = "https://github.com/cosmoEagle/PDFs_Orion"
Repository = "https://github.com/cosmoEagle/PDFs_Orion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
